refactor impressum page layout css styles

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer container">
 
         <a href="#" class="logo-holder">
             <div class="logo-text">Mezekr Weldu</div>
