--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                     </p>
                     <div class="call-to-action">
-                        <a href="./pdf_files/Mezekr-Weldu-Resume.pdf"
+                        <a href="doc_files/Mezekr-Weldu-Resume.pdf"
                             target="_blank" class="button black">
                             View Resume</a>
                         <a href="mailto:mezekr.weldu@tutamail.com"
@@ -116,88 +116,135 @@
             <div class="holder-blue">
 
                 <div class="left-column">
-                    <h3>What I do</h3>
-                    <h3>Frontend</h3>
+                    <div class="skills-header">
+                        <h3>What I do</h3>
+                        <p>I enjoy the process of
+                            designing, building, testing, and deploying complete
+                            web
+                            applications from start to finish. Below are
+                            some of
+                            the
+                            skills, technologies, and tools I have experience
+                            with.
+                        </p>
+                    </div>
+                    <div class="dev-skill">
+                        <h3>Front-end</h3>
+                        <div class="discription-box">
+                            <small> + </small>
+                            <p> Turn
+                                UI/UX design into an actual web or app.
+                            </p>
+                        </div>
+                        <ul>
+                            <li>Html</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>React</li>
+                            <li>Angular</li>
+                            <li> React Native</li>
+                            <li>SASS/SCSS</li>
+                            <li> Bootstrap</li>
+                            <li> Redux</li>
+                        </ul>
+                    </div>
+                    <div class="dev-skill">
+                        <h3>Back-end</h3>
+                        <div class="discription-box">
+                            <small> + </small>
+                            <p>Implement server-side logic, database
+                                integration, and API connectivity to support
+                                web/app with data for real-time interaction.</p>
+                        </div>
+                        <ul>
+                            <li>Node</li>
+                            <li>Express</li>
+                            <li>Python</li>
+                            <li>MongoDB / MySQL</li>
+                            <li>Restful API</li>
+                            <li>Docker</li>
 
-                    <p><span> &#11166</span> Turn
-                        UI/UX design into an actual web or app.</p>
-                    <ul>
-                        <li>Html</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>React</li>
-                        <li>Angular</li>
-                        <li> React Native</li>
-                        <li>SASS/SCSS</li>
-                        <li> Bootstrap</li>
-                        <li> Redux</li>
-                    </ul>
-                    <h3>Backend</h3>
-                    <p><span> &#11166</span> Develop logic to support web/app
-                        with data and
-                        real-time interaction.</p>
-                    <ul>
-                        <li>Node</li>
-                        <li>Express</li>
-                        <li>Python</li>
-                        <li>MongoDB / MySQL</li>
-                        <li>Restful API</li>
-                        <li>Docker</li>
+                        </ul>
+                    </div>
+                    <div class="dev-skill">
+                        <h3>ML / Data processing</h3>
+                        <div class="discription-box">
+                            <small> + </small>
+                            <p>
+                                Data Preprocessing, Analysis, and Visualization
+                                for building a Machine learning model.
+                            </p>
+                        </div>
+                        <ul>
+                            <li>Python</li>
+                            <li>Numpy</li>
+                            <li>Plotly</li>
+                            <li>Matplotlip</li>
+                            <li>Scipy</li>
+                            <li>Jupyter Notebook</li>
 
-                    </ul>
-                    <h3>Data processing</h3>
-                    <p> <span> &#11166</span> Data processing, Analysing,
-                        cleaning and visualising
-                        row data.
-                    </p>
-                    <ul>
-                        <li>Python</li>
-                        <li>Numpy</li>
-                        <li>Plotly</li>
-                        <li>Matplotlip</li>
-                        <li>Scipy</li>
-                        <li>Jupyter Notebook</li>
-
-                    </ul>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="right-column">
-                    <h3>Career</h3>
-                    <p>I am a software developer with a M.Sc. in Applied
-                        Computer Science, specializing in full-stack web
-                        development.</p>
+                    <div class="skills-header">
+                        <h3>Career</h3>
+                        <p>I am a software developer with a M.Sc. in Applied
+                            Computer Science, specializing in full-stack web
+                            development.</p>
+                    </div>
+
                     <div class="career experience">
                         <h3>Experience</h3>
                         <div class="contents">
                             <ul>
-                                <li><span>2023 - 2024</span> Certificate in Full
-                                    Stack Web Development, CarreerFoundry</li>
-                                <p class="experience-detail"> &#11208 500+ hours
-                                    of
-                                    intensive, project-based training focused on
-                                    JavaScript, HTML, CSS, and the most
-                                    prominent web development frameworks,
-                                    libraries, techstacks (MERN and MEAN), and
-                                    tools.</p>
+                                <li><span>2023 - 2024</span> Certificate in
+                                    Full
+                                    Stack Web Development, CarreerFoundry
+                                </li>
+                                <div class="discription-box">
+                                    <small> + </small>
+                                    <p class="experience-detail">900+ hours of
+                                        immersive, project-based
+                                        training in JavaScript, HTML, CSS, and
+                                        the most popular web development
+                                        frameworks, libraries, and tech stacks
+                                        (MERN and MEAN), as well as other web
+                                        dev tools.</p>
+                                </div>
                                 <li><span>2023</span> Software
                                     developer,
                                     FERCHAU GmbH (Pulsotronic GmbH
                                     &amp Co. KG)</li>
-                                <p class="experience-detail"> &#11208 Designed
-                                    and
-                                    developed a software module to preprocess,
-                                    cleanse, and apply statistical and frequency
-                                    analysis to digital audio signals.</p>
-                                <li><span>2020 - 2022</span> Research assistant
+                                <div class="discription-box">
+                                    <small> + </small>
+                                    <p class="experience-detail">
+                                        Designed and developed a software module
+                                        to
+                                        preprocess, cleanse, and apply
+                                        statistical and
+                                        frequency analysis to digital audio
+                                        signals.
+                                    </p>
+                                </div>
+                                <li><span>2020 - 2022</span> Research
+                                    assistant
                                     on research projects, TU Bergakademie
-                                    Freiberg</li>
-                                <p class="experience-detail"> &#11208 DiP-iT
-                                    (Digital
-                                    Programming in Teams) research projects</p>
+                                    Freiberg.
+                                </li>
+                                <div class="discription-box">
+                                    <small> + </small>
+                                    <p class="experience-detail"> DiP-iT
+                                        (Digital
+                                        Programming in Teams) research projects.
+                                    </p>
+                                </div>
                             </ul>
                         </div>
                     </div>
-                    <div class=" career education">
+
+                    <div class="career education">
                         <h3>Education</h3>
                         <div class="contents">
                             <ul>
@@ -320,7 +367,7 @@
                                         d="M13.723 18.654l-3.61 3.609c-2.316 2.315-6.063 2.315-8.378 0-1.12-1.118-1.735-2.606-1.735-4.188 0-1.582.615-3.07 1.734-4.189l4.866-4.865c2.355-2.355 6.114-2.262 8.377 0 .453.453.81.973 1.089 1.527l-1.593 1.592c-.18-.613-.5-1.189-.964-1.652-1.448-1.448-3.93-1.51-5.439-.001l-.001.002-4.867 4.865c-1.5 1.499-1.5 3.941 0 5.44 1.517 1.517 3.958 1.488 5.442 0l2.425-2.424c.993.284 1.791.335 2.654.284zm.161-16.918l-3.574 3.576c.847-.05 1.655 0 2.653.283l2.393-2.389c1.498-1.502 3.94-1.5 5.44-.001 1.517 1.518 1.486 3.959 0 5.442l-4.831 4.831-.003.002c-1.438 1.437-3.886 1.552-5.439-.002-.473-.474-.785-1.042-.956-1.643l-.084.068-1.517 1.515c.28.556.635 1.075 1.088 1.528 2.245 2.245 6.004 2.374 8.378 0l4.832-4.831c2.314-2.316 2.316-6.062-.001-8.377-2.317-2.321-6.067-2.313-8.379-.002z" />
                                 </svg>
 
-                                <a href="./pdf_files/MeziFlix_Casestudy.pdf"
+                                <a href="doc_files/MeziFlix_Casestudy.pdf"
                                     target="_blank" class="link">Case Study</a>
                             </button>
                             <button class="card_button">
@@ -583,13 +630,16 @@
                 <div class="contact-links">
                     <div class="contact-text">
                         <p>
-                            I'm really grateful that you took the time to visit
-                            my portfolio. If there's anything else I can help
-                            you with or you'd like to get in touch, you will
-                            find me in linkedin and GitHub useing the links
-                            below. <br> Or
-                            just use the form to send me a direct message and
-                            I'll get back to you as soon as I can.
+                            I appreciate the time you took to review my
+                            portfolio. I would be happy to assist you with any
+                            issues you may have. Please feel free to contact me
+                            via LinkedIn and GitHub using the links
+                            below.<br><br>
+                            Alternatively, you can simply use the contact form
+                            below to send me a direct message. I will get back
+                            to you as soon as possible.
+
+
                         </p>
                     </div>
                     <div class="social-links">
@@ -605,7 +655,7 @@
                         <a href="mailto:mezekr.weldu@tutamail.com"
                             target="_blank" class="button white">
                             Contact me</a>
-                        <a href="./pdf_files/Mezekr-Weldu-Resume.pdf"
+                        <a href="doc_files/Mezekr-Weldu-Resume.pdf"
                             target="_blank" class="button black">
                             Download Resume</a>
                     </div>
