--- a/index.html
+++ b/index.html
@@ -69,16 +69,21 @@
                     </h1>
                     <p><small>Full Stack Web Developer</small> based in
                         Germany.
-                        <span>Leverage Full-Stack Web Development Capabilities
-                            to Bring Ideas to the Actual Web with
-                            Precision!</span>
-                        <span> I am a software developer with a M.Sc. in Applied
-                            Computer Science, specializing in full-stack web
-                            development. I also have two years of experience in
-                            data processing and machine learning. Now, I am
-                            excited about the opportunity to work in full-stack
-                            to turn clients' ideas into reality while combining
-                            my skills with my professional aspirations. </span>
+                        <span>Leveraging my expertise in software development, I
+                            turn innovative ideas into real, functional web
+                            apps with passion and precision!</span>
+                        <span> I am a software developer with an M.Sc. in
+                            Applied Computer Science.
+                            I specialized in full-stack web development by
+                            completing CareerFoundry's over 900 hours
+                            comprehensive, hands-on, project-based Full-stack
+                            web development program.<br>
+                            Now, combining my skills with my professional
+                            aspirations, I am excited to work in full-stack to
+                            turn clients' ideas into reality.
+                            My two years of experience in data processing and
+                            machine learning will leverage my expertise in web
+                            development.</span>
 
                     </p>
                     <div class="call-to-action">
@@ -190,9 +195,9 @@
                 <div class="right-column">
                     <div class="skills-header">
                         <h3>Career</h3>
-                        <p>I am a software developer with a M.Sc. in Applied
-                            Computer Science, specializing in full-stack web
-                            development.</p>
+                        <p>I have an M.Sc. in Applied Computer Science and
+                            specialized in full-stack web development through
+                            CareerFoundry's 900+ hours program.</p>
                     </div>
 
                     <div class="career experience">
