remove css class from footer of index page

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             I specialized in full-stack web development by
                             completing CareerFoundry's over 900 hours
                             comprehensive, hands-on, project-based Full-stack
-                            web development program.<br>
+                            web development program.<br><br>
                             Now, combining my skills with my professional
                             aspirations, I am excited to work in full-stack to
                             turn clients' ideas into reality.
@@ -705,7 +705,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer container">
+    <footer class="footer">
 
         <a href="#" class="logo-holder">
             <div class="logo-text">Mezekr Weldu</div>
