--- a/impressum.html
+++ b/impressum.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- <link rel="stylesheet" href="css/style.production.css"> -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.production.css">
+    <!-- <link rel="stylesheet" href="css/styles.css"> -->
     <title>Mezekr W. - Impressum</title>
 </head>
 
