add more skills content to skills section

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="css/style.production.css">
-    <!-- <link rel="stylesheet" href="css/styles.css"> -->
+    <!-- <link rel="stylesheet" href="css/style.production.css"> -->
+    <link rel="stylesheet" href="css/styles.css">
     <script src="js/scripts.js" defer></script>
 
 </head>
@@ -151,6 +151,7 @@
                             <li>SASS/SCSS</li>
                             <li> Bootstrap</li>
                             <li> Redux</li>
+                            <li>Tailwind CSS</li>
                         </ul>
                     </div>
                     <div class="dev-skill">
@@ -162,12 +163,18 @@
                                 web/app with data for real-time interaction.</p>
                         </div>
                         <ul>
-                            <li>Node</li>
+                            <li>Node.js</li>
                             <li>Express</li>
-                            <li>Python</li>
                             <li>MongoDB / MySQL</li>
                             <li>Restful API</li>
                             <li>Docker</li>
+                            <li>JWT Auth</li>
+                            <li>AWS Lamda</li>
+                            <li>Serverless</li>
+                            <li>Firebase</li>
+                            <li>Vite</li>
+                            <li>Python</li>
+                            <li>Django</li>
 
                         </ul>
                     </div>
@@ -183,11 +190,13 @@
                         <ul>
                             <li>Python</li>
                             <li>Numpy</li>
+                            <li>pandas</li>
                             <li>Plotly</li>
                             <li>Matplotlip</li>
                             <li>Scipy</li>
+                            <li>Keras</li>
+                            <li>TensorFlow</li>
                             <li>Jupyter Notebook</li>
-
                         </ul>
                     </div>
                 </div>
@@ -343,12 +352,13 @@
                                 <li>Html</li>
                                 <li>CSS</li>
                                 <li>JavaScript</li>
-                                <li>RESTful API</li>
                                 <li>React</li>
-                                <li>React Bootcomp</li>
-                                <li>MongoDB</li>
-                                <li>Docker</li>
                                 <li>Vite</li>
+                                <li>MongoDB</li>
+                                <li>RESTful API</li>
+                                <li>React Bootcomp</li>
+                                <li>Docker</li>
+
                             </ul>
                         </div>
                         <div class="card-links">
@@ -420,6 +430,7 @@
                                 <li>JavaScript</li>
                                 <li> API</li>
                                 <li>Ajax</li>
+                                <li>Bootcomp</li>
                             </ul>
                         </div>
                         <div class="card-links">
@@ -472,7 +483,7 @@
                             <ul>
                                 <li>Angular 17</li>
                                 <li>SCSS</li>
-                                <li>TS</li>
+                                <li>TypeScript</li>
                                 <li>RESTful API</li>
                                 <li>Material design</li>
                             </ul>
@@ -588,11 +599,13 @@
                                 <li>React</li>
                                 <li>AWS Lamda</li>
                                 <li>serverless</li>
+                                <li>JavaScript</li>
                                 <li>Jest</li>
                                 <li>Google OAuth</li>
                                 <li>Google Calendar API</li>
                                 <li>CSS</li>
-                                <li>JavaScript</li>
+                                <li>HTML</li>
+
                             </ul>
                         </div>
                         <div class="card-links">
