link the autoprefixered production css file

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <!-- <link rel="stylesheet" href="css/style.production.css"> -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.production.css">
+    <!-- <link rel="stylesheet" href="css/styles.css"> -->
     <script src="js/scripts.js" defer></script>
 
 </head>
@@ -87,7 +87,7 @@
 
                     </p>
                     <div class="call-to-action">
-                        <a href="doc_files/Mezekr-Weldu-Resume.pdf"
+                        <a href="doc_files/Mezekr-Weldu-Resume_Fk.pdf"
                             target="_blank" class="button black">
                             View Resume</a>
                         <a href="mailto:mezekr.weldu@tutamail.com"
@@ -673,7 +673,7 @@
                         <a href="mailto:mezekr.weldu@tutamail.com"
                             target="_blank" class="button white">
                             Contact me</a>
-                        <a href="doc_files/Mezekr-Weldu-Resume.pdf"
+                        <a href="doc_files/Mezekr-Weldu-Resume_Fk.pdf"
                             target="_blank" class="button black">
                             Download Resume</a>
                     </div>
