--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="css/style.production.css">
-    <!-- <link rel="stylesheet" href="css/styles.css"> -->
+    <!-- <link rel="stylesheet" href="css/style.production.css"> -->
+    <link rel="stylesheet" href="css/styles.css">
     <script src="js/scripts.js" defer></script>
 
 </head>
@@ -108,7 +108,7 @@
             </div>
             <div class="hero-yellow">
                 <img src="img/MW_profile_small.png"
-                    alt="Mezekr profile portrait photograph" width="100%">
+                    alt="Mezekr profile portrait photograph">
             </div>
         </section>
 
